--- a/config/goakarabiner/goakarabiner.yaml
+++ b/config/goakarabiner/goakarabiner.yaml
@@ -2,32 +2,50 @@ manifest_version: 1
 
 base_layer: main
 
+profiles:
+  - name: Mastery
+    layer_id: main
+    base_config:
+      _extends: variables.base_config
+      selected: true
+    devices:
+      - _extends: devices.apple_keyboard
+        layer_id: main
+      - _extends: devices.keychron_k2
+        layer_id: main
+      - _extends: devices.naga_pro_keyboard
+        layer_id: razer_mouse
+  - name: Zombs
+    base_config:
+      _extends: variables.base_config
+    devices:
+      - _extends: devices.apple_keyboard
+        layer_id: main
+      - _extends: devices.keychron_k2
+        layer_id: main
+      - _extends: devices.naga_pro_keyboard
+        layer_id: razer_mouse_zombs
+  - name: Padawan
+    base_config:
+      _extends: variables.base_config
+    devices:
+      - _extends: devices.naga_pro_keyboard
+        layer_id: razer_mouse_zombs
+
 devices:
-  - name: Apple Internal Keyboard / Trackpad
+  apple_keyboard:
+    name: Apple Internal Keyboard / Trackpad
     vendor_id: 1452
     product_id: 641
-    layoutName: main
-
-  - name: Keychron K2
+  keychron_k2:
+    name: Keychron K2
     vendor_id: 1452
     product_id: 591
-    layoutName: main
-
-  - name: Naga Pro Keyboard
+  naga_pro_keyboard:
+    name: Naga Pro Keyboard
     vendor_id: 5426
     product_id: 143
-    layoutName: razer_mouse
-    # layoutName: razer_mouse_game
 
-  # - name: VirtualHID
-  #   product_id: 61453
-  #   vendor_id: 65261
-  #   layoutName: razer_mouse
-
-  # - name: VirtualHID
-  #   product_id: 48879
-  #   vendor_id: 65261
-  #   layoutName: razer_mouse
 
 aliases:
   m0: non_us_backslash
@@ -144,6 +162,7 @@ layers:
         ]
       - [["@l12"], [">/opt/homebrew/bin/yabai -m window --swap largest"]]
       - [["@l13"], [">/opt/homebrew/bin/yabai -m window --toggle sticky"]]
+      - [["@l14"], [">/opt/homebrew/bin/yabai -m window --toggle float"]]
 
       - [
           ["@l21"],
@@ -198,6 +217,7 @@ layers:
       - [["f13"], [{ pointing_button: "button3" }]]
       - [["f14"], [""]]
       - [["f15"], ["#left_as_right"]]
+      # - [["f15"], [{ pointing_button: "button2" }]]
 
   razer_mouse_game:
     keymap:
@@ -486,3 +506,166 @@ layers:
           [{ key: "grave_accent_and_tilde", modifiers: ["left_shift"] }],
         ] # ~
 
+  razer_mouse_zombs:
+    keymap:
+      - [["f1"], ["1"]]
+      - [["f2"], ["2"]]
+      - [["f3"], ["3"]]
+
+      - [["f4"], ["4"]]
+      - [["f5"], ["5"]]
+      - [["f6"], ["6"]]
+
+      - [["f7"], ["7"]]
+      - [["f8"], ["8"]]
+      - [["f9"], ["9"]]
+
+      - [["f10"], ["0"]]
+
+      - [["f11"], ["p"]]
+      - [["f12"], ["o"]]
+      - [["f13"], ["i"]]
+      - [["f14"], ["u"]]
+      # - [["f15"], ["#left_as_right"]]
+      - [["f15"], [{ pointing_button: "button2" }]]
+
+variables:
+  base_config:
+    complex_modifications:
+      parameters:
+        basic.simultaneous_threshold_milliseconds: 50
+        basic.to_delayed_action_delay_milliseconds: 500
+        basic.to_if_alone_timeout_milliseconds: 1000
+        basic.to_if_held_down_threshold_milliseconds: 500
+        mouse_motion_to_scroll.speed: 100
+      rules: []
+    devices:
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 641
+          vendor_id: 1452
+        ignore: false
+        manipulate_caps_lock_led: true
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: false
+          is_pointing_device: true
+          product_id: 641
+          vendor_id: 1452
+        ignore: true
+        manipulate_caps_lock_led: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: true
+          is_pointing_device: true
+          product_id: 591
+          vendor_id: 1452
+        ignore: true
+        manipulate_caps_lock_led: true
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 591
+          vendor_id: 1452
+        ignore: false
+        manipulate_caps_lock_led: true
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: true
+          is_pointing_device: false
+          product_id: 143
+          vendor_id: 5426
+        ignore: false
+        manipulate_caps_lock_led: true
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+      - disable_built_in_keyboard_if_exists: false
+        fn_function_keys: []
+        identifiers:
+          is_keyboard: false
+          is_pointing_device: true
+          product_id: 143
+          vendor_id: 5426
+        ignore: true
+        manipulate_caps_lock_led: false
+        simple_modifications: []
+        treat_as_built_in_keyboard: false
+    fn_function_keys:
+      - from:
+          key_code: f1
+        to:
+        - consumer_key_code: display_brightness_decrement
+      - from:
+          key_code: f2
+        to:
+        - consumer_key_code: display_brightness_increment
+      - from:
+          key_code: f3
+        to:
+        - apple_vendor_keyboard_key_code: mission_control
+      - from:
+          key_code: f4
+        to:
+        - apple_vendor_keyboard_key_code: spotlight
+      - from:
+          key_code: f5
+        to:
+        - consumer_key_code: dictation
+      - from:
+          key_code: f6
+        to:
+        - key_code: f6
+      - from:
+          key_code: f7
+        to:
+        - consumer_key_code: rewind
+      - from:
+          key_code: f8
+        to:
+        - consumer_key_code: play_or_pause
+      - from:
+          key_code: f9
+        to:
+        - consumer_key_code: fast_forward
+      - from:
+          key_code: f10
+        to:
+        - consumer_key_code: mute
+      - from:
+          key_code: f11
+        to:
+        - consumer_key_code: volume_decrement
+      - from:
+          key_code: f12
+        to:
+        - consumer_key_code: volume_increment
+    parameters:
+      delay_milliseconds_before_open_device: 1000
+    selected: false
+    simple_modifications: []
+    virtual_hid_keyboard:
+      country_code: 0
+      indicate_sticky_modifier_keys_state: true
+      mouse_key_xy_scale: 100
+
+karabiner_base_config:
+  global:
+    check_for_updates_on_startup: true
+    show_in_menu_bar: true
+    show_profile_name_in_menu_bar: true
